prevent huge load on keyup

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
             if (evt.key == "Enter") {
                 fn_enter();
             }
-            fn_hash_save();
+            // fn_hash_save();
         };
         elem_in.onkeyup = function () {
-            fn_hash_save();
+            // fn_hash_save();
         }
         console.log("focusing...");
         elem_cli.focus();
